Updated dashboard content
Updated names and items in the summary tables

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -32,7 +32,7 @@
 		{{ govukSummaryList({
 			card: { title: { html: '<span class="govuk-!-font-size-24">Getting Building Fund</span>'} },
 			rows: [
-				{ key: { text: "Village hall extension" }, value: { html: "Report due:<br>12 October 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for this project" } ] } }
+				{ key: { text: "Napton village hall extension" }, value: { html: "Report due:<br>12 October 2024 " }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for this project" } ] } }
 			]
 	  	}) }}
 
@@ -40,8 +40,8 @@
 		{{ govukSummaryList({
 			card: { title: { html: '<span class="govuk-!-font-size-24">Community Renewal Fund</span>'}, actions: { items: [ { href: "#", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for Food bank fund" } ] } },
 			rows: [
-				{ key: { text: "Blackpool youth hub" }, value: { html: "Report due:<br>16 June 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for this project" } ] } },
-				{ key: { text: "Ready for work" }, value: { html: "Report due:<br>30 August 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Boddington youth hub" }, value: { html: "Report due:<br>16 June 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Elevating local communities" }, value: { html: "Report due:<br>30 August 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for this project" } ] } },
 				{ key: { text: "Piloting Place-Based Innovation Catalysts" }, value: { html: "Report due:<br>22 September 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View details", visuallyHiddenText: "for this project" } ] } }
 			]
 	  	}) }}
