--- a/app/views/project.html
+++ b/app/views/project.html
@@ -41,10 +41,10 @@
 
 		<h2 class="govuk-heading-m govuk-!-margin-top-7">Reports due</h2>
 		{{ govukSummaryList({		
-			card: { title: { text: "February 2024 to April 2024" } },	
+			card: { title: { text: "Due by 10 December 2024" } },	
 			rows: [				
 				
-				{ key: { text: "Reporter" }, value: { html: "Gemma Currie" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Reporting period" }, value: { html: "1 April 2024 to 30 September 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Start report", visuallyHiddenText: "for this project" } ] } },
 				{ key: { text: "Deadline" }, value: { html: "26 July 2024" } },
 				{ key: { text: "Deadline" }, value: { html: "26 July 2024" } },
 				{ key: { text: "Deadline" }, value: { html: "26 July 2024" } },
