--- a/app/views/users/edit.html
+++ b/app/views/users/edit.html
@@ -80,14 +80,10 @@
             actions: {
               
             }
-          }
-        ]
-      }) }}
-
-
-      <!-- {
+          },
+           {
         key: {
-          text: "Position"
+          text: "Role"
         },
         value: {
           text: "Section 151 Officer"
@@ -95,7 +91,12 @@
         actions: {
           
         }
-      }, -->
+      }
+        ]
+      }) }}
+
+
+     
 
 
       <p class="govuk-body"><a class="govuk-link" href="#">Remove this user</a></p>
