--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -17,7 +17,7 @@
 		
 		{% set reportDue %}
 		<p class="govuk-notification-banner__heading">
-			Your report for ’Blackpool youth hub’ is due in 10 days.
+			Your report for 'Boddington youth hub’ is due in 10 days.
 			<a class="govuk-notification-banner__link" href="/project/">Complete report</a>.
 		</p>
 		{% endset %}
