--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = false %}
+{% set showBackLink = true %}
 {% set showNav = true %}
 {% set showBread = true %}
 
@@ -8,6 +8,9 @@
 
 {% set pageHeading = "Boddington youth hub" %}
 {% set pageSection = "Warwickshire county council " %}
+{% set pageSection = "Community Renewal Fund " %}
+
+
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -18,11 +21,11 @@
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}
 		
 	</div>
-	<div class="govuk-grid-column-two-thirds">
+	<div class="govuk-grid-column-three-quarters">
 
 		<h2 class="govuk-heading-m">Reports due</h2>
 		{{ govukSummaryList({				
-			card: { title: { text: "Due by 10 December 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Start report", visuallyHiddenText: "for this project" } ] } },	
+			card: { title: { text: "Due by 10 December 2024" }, actions: { items: [ { href: "/project/", classes: "govuk-link--no-visited-state", text: "Start report", visuallyHiddenText: "for this project" } ] } },	
 			rows: [				
 				
 				{ key: { text: "Reporting period" }, value: { html: "1 April 2024 to 30 September 2024" } },
@@ -32,11 +35,13 @@
 				
 			]
 	  	}) }}
+
+		  
 		  <!-- { key: { text: "Reporting period" }, value: { html: "February 2024 to April 2024" } },	 -->
 
 		  <!-- { key: { text: "Date submitted" }, value: { html: 'Not started' } } -->
 
-		  <h2 class="govuk-heading-m govuk-!-margin-top-7">Submitted reports</h2>
+		  <h2 class="govuk-heading-m govuk-!-margin-top-9">Submitted reports</h2>
 
 		  {{ govukSummaryList({		
 			card: { title: { text: "Submitted 30 May 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View report", visuallyHiddenText: "for this project" } ] } },	
@@ -65,14 +70,7 @@
 		  <!-- { key: { text: "Date submitted" }, value: { html: '28 February 2024' } } -->
 
 	</div>
-  	<div class="govuk-grid-column-one-third">
 
-		{% include "includes/projectBox.html "%}
-		
-		
-		
-  	
-	</div>
 
 	<div class="govuk-grid-column-full">
 
