--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -4,8 +4,8 @@
 {% set showBread = true %}
 {% set showNav = false %}
 
-{% set pageHeading = "Reporting period February 2024 to April 2024" %}
-{% set pageSection = 'Blackpool youth hub' %}
+{% set pageHeading = "Reporting period 1 April 2024 to 30 September 2024" %}
+{% set pageSection = 'Boddington youth hub' %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
   			html: html
 		}) }} -->
 
-		<p class="govuk-body govuk-!-margin-bottom-7">Due by 16 June 2024</p>
+		<p class="govuk-body govuk-!-margin-bottom-7">Due by 10 December 2024</p>
 		<!-- <br><span class="govuk-body-s">Last updated: 1 June 2024 by Gemma Currie</span></p> -->
 	
 		{% include "includes/task-overview.html" %}
