--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -15,7 +15,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}						
 		
-		{% set reportDue %}
+		<!-- {% set reportDue %}
 		<p class="govuk-notification-banner__heading">
 			Your report for 'Boddington youth hub’ is due in 10 days.
 			<a class="govuk-notification-banner__link" href="/project/">Complete report</a>.
@@ -24,7 +24,7 @@
 
 		{{ govukNotificationBanner({
   			html: reportDue
-		}) }}
+		}) }} -->
 
 	</div>
 	<div class="govuk-grid-column-three-quarters">
