initial change to the data download email

--- a/app/views/emails/get-data.html
+++ b/app/views/emails/get-data.html
@@ -19,7 +19,7 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
-    <p>Your monitoring and evaluation data file is now ready to be downloaded.</p>
+    <p>Your monitoring and evaluation spreadsheet is ready to be downloaded.</p>
     <p><a href="#">Download your spreadsheet (MS Excel Spreadsheet, {size} KB)</a> (.xlsx).</p>
     <p>This link will stop working after [x-time-period].</p>
     <p>If your link has expired, you can make a new download request by going to: <a href="#">https://rb.gy/service/download-data</a>.</p>
