--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -47,9 +47,20 @@
         {% set pathfindersHtml %}
         <h3 class="govuk-heading-m">Pathfinders report</h3>
         <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Who will be signing off the report</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Who will be signing off the report?</a></li>
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s {NAME}’s email address?</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s {NAME}’s role?</a></li>
+            </ul>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Who else will be contributing to the report? </a></li>
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s {NAME}’s email address?</a></li>                
+            </ul>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Completion dates</a></li>
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s the financial completion date?</a></li>                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s the practical completion date?</a></li>                
+            </ul>
                       
             
             
