--- a/app/views/find/confirmation.html
+++ b/app/views/find/confirmation.html
@@ -18,7 +18,7 @@
 		        
         <h2 class="govuk-heading-m govuk-!-margin-top-7">What happens next</h2>
         <p class="govuk-body">We will email a link to <span class="govuk-!-font-weight-bold">user@levellingup.gov.uk</span>.</p>
-        <p class="govuk-body">This may take anything up to [whatever we think the maximum amount of time is] minutes to come through to your inbox.</p>
+        <p class="govuk-body">This may take up to 5 minutes to be delivered to your inbox.</p>
 
         <h2 class="govuk-heading-m">If you’ve not recieved the email</h2>
         <p class="govuk-body">If you cannot see the email in your inbox, check your junk or spam folder. If you’re still having problems, <a href="#">request a new link to download your data</a> or email us at <a href="mailto:fsd.support@levellingup.gov.uk">fsd.support@levellingup.gov.uk</a>.</p>
