--- a/app/views/project/sign-off/confirmation.html
+++ b/app/views/project/sign-off/confirmation.html
@@ -12,7 +12,7 @@
 	<div class="govuk-grid-column-two-thirds">
 
         {{ govukPanel({
-			titleText: "Report submitted",
+			titleText: "Report declined",
 			html: "Reporting period<br><strong>July 2023 to September 2023</strong>"
 		}) }}
 	
@@ -21,18 +21,14 @@
 		<h2 class="govuk-heading-m">What happens next</h2>	
 		
 		
-		<p class="govuk-body">We will email the section 151 officer .....</p>		  
+		<p class="govuk-body">We will email the person responsible bla bla bla .....</p>		  
 
-
-		
-		
-		
-		<p><a href="/project/" class="govuk-link govuk-link--no-visited-state">Return to your project overview</a></p>
 
 		<!-- <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p> -->
 
-
-		<p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-submitted">Report submitted email</a></p>
+		<p class="govuk-body-s"><a href="/emails/report-declined-confirmation">Report declined confirmation</a></p>
+		
+		
   	</div>  
 </div>
 
