further screens and email pages for sign off flows

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -135,6 +135,42 @@
             </ul>              
         {% endset -%}  
 
+        {% set signoffHtml %}            
+        <h3 class="govuk-heading-m">Sign off</h3>            
+            <ul class="govuk-list govuk-list--bullet">
+                
+                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/check-your-answers" >Check your answers</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/submit-report" >Submit your report</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/confirmation" >Report submitted</a></li>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-submitted" >Email: Report submitted</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/section151" >Email: Section 151 sign off</a></li>
+                </ul>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in?userType=Section151" >Sign in</a></li>
+
+
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/" >Sign off and submit project report</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/reason-for-decline" >Why have you declined this report?</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?status=decline" >Report declined</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?status=" >Report signed off</a></li>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined-confirmation" >Email: Report declined confirmation</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined" >Email: Report declined</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation" >Email: Report signed off confirmation 151</a></li>
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation-reporter" >Email: Report signed off confirmation reporter</a></li>
+                </ul>
+                
+                
+
+
+                
+
+                
+                
+            </ul>              
+        {% endset -%} 
+
         {% set adminHtml %}            
         <h3 class="govuk-heading-m">Admin pages</h3>
         <p>To follow</p>
@@ -176,6 +212,7 @@
             { label: "Service pages", id: "service", panel: { html: serviceHtml } },
             { label: "Pathfinders report", id: "pathfindersReport", panel: { html: pathfindersHtml } },                        
             { label: "Report", id: "report", panel: { html: reportHtml } },                        
+            { label: "Sign off", id: "signoff", panel: { html: signoffHtml } },                        
             { label: "Admin", id: "admin", panel: { html: adminHtml } },             
             { label: "Find Monitoring", id: "findMonitoring", panel: { html: findHtml } }                    
             ]
