--- a/app/views/project/sign-off/index.html
+++ b/app/views/project/sign-off/index.html
@@ -29,7 +29,7 @@
 
       
 
-      <form method="post" action="/project/?report-13-status=Completed" >	  
+      <form method="post" action="/project/sign-off/confirmation?status=" >	  
   
         <div class="govuk-button-group">
           {{ govukButton({
