--- a/app/views/project/sign-off/confirmation.html
+++ b/app/views/project/sign-off/confirmation.html
@@ -2,8 +2,12 @@
 
 {% set showBackLink = false %}
 
-{% set pageHeading = "Check your answers" %}
-{% set pageSection = "Submit your report" %}
+{% if data['status'] == "decline" %}
+	{% set pageHeading = "Report declined" %}
+{% else %}
+	{% set pageHeading = "Report signed off" %}
+{% endif %}
+{% set pageSection = "" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -12,21 +16,29 @@
 	<div class="govuk-grid-column-two-thirds">
 
         {{ govukPanel({
-			titleText: "Report declined",
+			titleText: pageHeading,
 			html: "Reporting period<br><strong>July 2023 to September 2023</strong>"
 		}) }}
 	
-		<p class="govuk-body">We have sent you a confirmation email.</p>			
 
-		<h2 class="govuk-heading-m">What happens next</h2>	
+		{% if data['status'] == "declined" %}
+
+			<p class="govuk-body">We have sent you a confirmation email.</p>			
+			<h2 class="govuk-heading-m">What happens next</h2>	
+			<p class="govuk-body">We will email the person responsible bla bla bla .....</p>		  
+			<p class="govuk-body-s"><a href="/emails/report-declined-confirmation">Report declined confirmation</a></p>
+
+		{% else %}
+
+			<p class="govuk-body">We have sent you a confirmation email.</p>			
+			<h2 class="govuk-heading-m">What happens next</h2>	
+			<p class="govuk-body">We will email the person responsible bla bla bla .....</p>		  
+			
+			<p class="govuk-body-s"><a href="/emails/report-signed-off-confirmation">Report signed-off confirmation</a></p>
+
+
+		{% endif %}
 		
-		
-		<p class="govuk-body">We will email the person responsible bla bla bla .....</p>		  
-
-
-		<!-- <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p> -->
-
-		<p class="govuk-body-s"><a href="/emails/report-declined-confirmation">Report declined confirmation</a></p>
 		
 		
   	</div>  
