--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -24,7 +24,7 @@
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in" >Sign in</a></li>                
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/dashboard" >Funds and projects</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/dashboard" >Fund reports</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/project" >Project dashboard</a></li>
 
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/users/" >Users</a></li>
