--- a/app/views/project.html
+++ b/app/views/project.html
@@ -6,9 +6,8 @@
 
 
 
-{% set pageHeading = "Boddington youth hub" %}
+{% set pageHeading = "Pathfinders" %}
 {% set pageSection = "Warwickshire county council " %}
-{% set pageSection = "Community Renewal Fund " %}
 
 
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
