--- a/app/views/service-start.html
+++ b/app/views/service-start.html
@@ -21,7 +21,7 @@
 
 		{{ govukButton({
         	text: "Start now",
-        	href: "/oneLogin/",
+        	href: "/oneLogin/?status=&userType=",
         	isStartButton: true,
 			classes: "govuk-!-margin-top-5"
       	}) }}
@@ -30,7 +30,7 @@
       	
 		{{ govukButton({
         	text: "Start now",
-        	href: "/sign-in",
+        	href: "/sign-in?status=&userType=",
         	isStartButton: true,
 			classes: "govuk-!-margin-top-5"
       	}) }}
