--- a/app/views/users/add/confirmation.html
+++ b/app/views/users/add/confirmation.html
@@ -30,7 +30,7 @@
           <ul class="govuk-list">            
             <li><a href="#">Add another new user</a></li>
             <li><a href="#">Go to users</a></li>
-            <li><a href="#">Go to funds and projects</a></li>
+            <li><a href="#">Go to Fund reports</a></li>
             
           </ul>
       
